fixed ghost white space bug

--- a/myportfolio/css/styles.css
+++ b/myportfolio/css/styles.css
@@ -91,7 +91,7 @@
 .nav_overlay {
   position: fixed;
   z-index: 10;
-  top: -100%;
+  right: -100%;
   width: 100%;
   height: 100vh;
   background-color: black;
@@ -139,7 +139,7 @@
               -webkit-transform: scaleX(1);
               transform: scaleX(1); }
   .nav_overlay.show_menu {
-    top: 0; }
+    right: 0; }
 
 .no-scroll {
   overflow: hidden; }
@@ -266,7 +266,7 @@
     padding: 60px 0 60px 0; }
   .dev .dev_icon_grey {
     height: 120px;
-    transform: translateX(30%); }
+    transform: translateX(45%); }
   .dev .macbook {
     max-width: 420px;
     max-height: 100%; }
@@ -284,7 +284,7 @@
     height: 120px;
     margin-top: 60px;
     margin-bottom: 60px;
-    transform: translateX(-30%); }
+    transform: translateX(-45%); }
   .photography .camera {
     max-width: 420px;
     max-height: 100%; }
@@ -302,7 +302,7 @@
     height: 120px;
     margin-top: 60px;
     margin-bottom: 60px;
-    transform: translateX(30%); }
+    transform: translateX(45%); }
   .design .name_card {
     max-width: 520px;
     max-height: 100%; }
@@ -331,8 +331,7 @@
       margin-bottom: 30px; }
   .portfolio_container .portfolio_wrap {
     height: 200px;
-    background-color: #252525;
-    border: 1px solid #ccc; }
+    background-color: #252525; }
 
 .strength_container {
   padding: 80px 10px 60px 10px;
