--- a/myportfolio/scss/_header.scss
+++ b/myportfolio/scss/_header.scss
@@ -110,7 +110,7 @@
 .nav_overlay {
   position: fixed;
   z-index: 10;
-  top: -100%;
+  right: -100%;
   width: 100%;
   height: 100vh;
   background-color: black;
@@ -167,7 +167,7 @@
     }
   }
   &.show_menu {
-    top: 0;
+    right: 0;
   }
 }
 
