--- a/myportfolio/scss/_portfolio.scss
+++ b/myportfolio/scss/_portfolio.scss
@@ -23,6 +23,5 @@
   .portfolio_wrap {
     height: 200px;
     background-color: $section_bg;
-    border: 1px solid #ccc;
   }
 }
