--- a/myportfolio/scss/_services.scss
+++ b/myportfolio/scss/_services.scss
@@ -57,7 +57,7 @@
   }
   .dev_icon_grey {
     height: 120px;
-    transform: translateX(30%);
+    transform: translateX(45%);
   }
   .macbook {
     max-width: 420px;
@@ -75,7 +75,7 @@
     height: 120px;
     margin-top: 60px;
     margin-bottom: 60px;
-    transform: translateX(-30%);
+    transform: translateX(-45%);
   }
   .camera {
     max-width: 420px;
@@ -93,7 +93,7 @@
     height: 120px;
     margin-top: 60px;
     margin-bottom: 60px;
-    transform: translateX(30%);
+    transform: translateX(45%);
   }
   .name_card {
     max-width: 520px;
